--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
+<meta name="description" content="estella robot, estella, group managing bot, robot, telegram, open-source, coded" />
+<meta name="author" content="MrHonekawa" />
+<title>Estella Bot</title>
+<style type="text/css">body
+    {margin:40px auto;
+    max-width:1024px;
+    line-height:1.6;
+    font-size:16px;
+    color:#D3D3D3;
+    font-family:Arial;
+    background:#000000;
+    padding:0 10px}
+    h1,h2,h3{line-height:1.2}
+    a:link {color:#D3D3D3}
+</style>
+</head>
+<body>
+<header>
+<h1>Estella</h1>
+</header>
+<hr>
+<p>Estella is a group managing robot. Maded with love by python,
+It is based on open source code. That you can easily deploy LiL Estella</p>
